# watermelon

./: .gitignore  dblist  dp171115.ipynb  eular.ipynb  gain_experiment_statistics.py  gp.ipynb  notes.ipynb  readme.md  th.py
algo-impl-stash/: LinearizedPoseSolver.cpp  LinearizedPoseSolver.h  dungeon-generate.cpp
boostnotes/: boostnote.json
boostnotes/notes/: 025f3046-d09d-4eaa-a940-4c81fbc416b5.cson  0ce56ee7-f4c9-4864-a789-659b6acca243.cson  150eb3e8-d92c-4cfd-92d7-ef4368d90ef0.cson  19e0b736-9580-44cd-a972-e8fa7c993e04.cson  1b099868-2e5c-4209-a15f-3f93046b58ba.cson  1c67cb0f-10c7-45ac-a54c-ca14595001c1.cson  2acfad6d-7ec2-47cf-86b1-6c440b5b8d8d.cson  2f0b09fd-c498-462d-a04f-2be3a97a3df1.cson  33eb687f-f6db-4d28-b48d-bdfdfa30992e.cson  3560dc26-9315-4327-adc8-7e8ff16a0a01.cson  3c4dfc9a-38d1-4295-997f-df5d94e97b79.cson  3ddadd78-28a9-4651-8e72-98ac92f68ebe.cson  3e5c6920-6abf-4256-924c-37d4739bd072.cson  3e7f1d21-ebd4-4b3d-942a-4f9b39ffb914.cson  3f6af8a5-0856-451a-935a-626d12ff1367.cson  40be20ff-3a43-4e3d-8676-f80cd1bebd64.cson  49172ccb-f619-44f5-8853-e6df25a03413.cson  5427bbb3-08d8-411b-b381-7856071c6ebf.cson  630c667f-6cec-4d5e-a961-7737afefa606.cson  644f8513-34a8-46e6-8ef4-e730db1d45b9.cson  742f3481-4c61-45ef-b421-b2e850af9d8b.cson  76c5b190-fda8-4315-a02d-84832bf7bbb2.cson  787ee469-3fb1-417d-8e83-c85919c661cf.cson  821a59f0-5274-4d80-a6d0-0f5adc57368b.cson  82c61488-e9e4-4f24-9e91-c50182073265.cson  8b3f73fd-64ae-4547-99b4-d03055118eef.cson  8ce74abe-e530-4317-9147-bfe22573d186.cson  8efaa874-43dd-4d1e-aede-453536fbfe5c.cson  923ce8f7-5b6c-4948-938b-5a6628e6c50f.cson  94ccfeb7-5107-42b4-97f7-f88a2777440e.cson  966229e1-2641-45c3-98f3-b84a1d775a02.cson  9ff6f955-10ba-4d76-9556-2984decafe30.cson  a0dfcb01-4537-47ed-9ced-9cbc93c21f08.cson  a8689bca-d6d9-4edf-90f6-64206f81e8cf.cson  ae4361d0-3d0f-4a4a-9e6e-36388e531ae4.cson  b1a8eeb5-0d17-4e67-bcdf-6877ea09ff58.cson  b280a95f-7018-4abe-a170-ce412ca75bd2.cson  b3b188ac-8602-41ab-b7df-8ba38522eb2f.cson  b55c5e22-bc9c-42e8-99de-291367e0d543.cson  bae4c4b8-7f7a-4245-aeaa-ca1ee798fb2a.cson  (+15 more)
cpp/: CMakeLists.txt  Solution.cpp  ll.hpp  ll_test.cpp  llda.hpp  lps.hpp
cpp/pyb_test/: CMakeLists.txt  pyb.cpp
cpps/: CMakeLists.txt  Solution.h  sphere_test.cpp  test.cpp
data/: .vimrc
data/theme-your-light/: OSSREADME.json  package.json
data/theme-your-light/themes/: your-light-color-theme.json
doc/: .gitignore  nez-class.dot  nez-process.dot
doc/public/: 16. algo_notes.md  17. methods_for_non_linear_least_squares_problems.md  18. numerical_optimization.md  19. applied_analysis.md  21. differential geometry.md  5. book_notes.md  9. convex_optimization.md
joplin/books/: graph theory with applications.md  neural networks and deep learning.md
joplin/linux c/: commands.md  git.md  software-notes.md
joplin/maker/: love2d.md
joplin/notes/: lines.md  matrix basics.md  random.md
joplin/python/: python.md  sci.md
joplin/temp-storage/: algebra.md  all of statistics.md  optimization algorithms on matrix manifold.md
ll/: ll.hpp  ll.lua  ll.moon  ll_test.cpp  llda.hpp  llhl.hpp  lltp.hpp  llui.hpp  llv2.moon
lsp/: a.lisp  cds.db
notebook/.obsidian/: app.json  appearance.json  hotkeys.json  workspace  workspace.json
notebook/books/: deep learning.md  matrix analysis for scientists and engineers.md  the elements of statistical learning.md  学习笔记.md
notebook/cpp/: std.md
notebook/linux c/: commands.md  git.md  software-notes.md
notebook/maker/: love2d & lua.md
notebook/notes/: matrix basics.md  random.md
notebook/python/: python.md  sci.md  thirdparty.md
py/: algo.py  cg.py  dg.py  digger.py  gather.py  l1_average.py  notes.ipynb  rotation.py  sphere_draw.py  swap_json_pair.py  wx.py  xlsx2json.py
temp/: dbsize  loclist  qualitylist
typora/books/: algebra.md  graph theory with applications.md
typora/cpp/: boost.md  cmake.md  std.md
typora/linux c/: commands.md  git.md  software-notes.md
typora/maker/: godot.md  love2d.md
typora/notes/: linear programming.md  matrix basics.md  prog-algo.md  random.md
typora/python/: python.md  sci.md  thirdparty.md
typora/temp-storage/: advanced calculus of several variables.md  numberical optimization.md
watermelon/: .bazelrc  WORKSPACE  config.bzl
watermelon/ll/: BUILD.bazel  ll.hpp  llda.hpp  lltp.hpp  llui.hpp
watermelon/ll/test/: BUILD.bazel  ll_test.cpp
watermelon/stash/: ceres_optimizer.cpp  ceres_optimizer.h  dbscan.hpp  dbscan_l2.h  flann_search.hpp  fov.cpp
watermelon/viewer/: BUILD.bazel  main.cpp  shader.cpp  shader.h  viewer.cpp  viewer.h
watermelon/viewer/assets/: BUILD.bazel  shader.fs  shader.vs
watermelon/viewer/glad/: glad.cpp  glad.h
