load("//:config.bzl", "COPTS_BASE", "COPTS_INCLUDE", "COPTS_STATIC_LIB", "LINK_BASE")

package(default_visibility = ["//visibility:public"])

COPTS_INCLUDE_ADD = [
    "-Ill/",
]

cc_test(
    name = "ll_test",
    srcs = ["ll_test.cpp"],
    copts = COPTS_INCLUDE_ADD + COPTS_INCLUDE + COPTS_BASE + COPTS_STATIC_LIB + LINK_BASE,
    linkstatic = True,
    deps = [
        "//ll",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)
